Convert to Worpdress

--- a/wp-content/themes/basic/sass/_customVariables.scss
+++ b/wp-content/themes/basic/sass/_customVariables.scss
@@ -4,10 +4,21 @@ $bootstrap-sass-asset-helper: false !default;
 // --------------------------------------------------
 
 //== Colors
-// $brand-primary:         #96603c;
+$brand-primary:         #59a0d7;
+$secondary-color:		#3d3e42;
+	
+$secondary-background:	#f7f7f8;
+
+$para-color-1:			#a0a0a0;
+
+//$brand-primary:         #59a0d7;
 // $footer-primary:		#ccc;
+//#59a0d7
 
 
+//#4089c1 want to make this 10% darker on hover
+
+//color: darken($brand-primary, 5%)
 
 
 //== Colors
