--- a/wp-content/themes/basic/sass/app.scss
+++ b/wp-content/themes/basic/sass/app.scss
@@ -8,7 +8,15 @@
 @import "../font_awesome/awesome";
 
 
+/* @import "temp"; */
+@import "general";
+@import "navbar";
+@import "home";
+@import "about";
+@import "blog";
+@import "contact";
+@import "footer";
+@import "media";
 
-@import "temp";
 
 
