updates to style sheets

--- a/wp-content/themes/basic/css/app.css
+++ b/wp-content/themes/basic/css/app.css
@@ -3974,6 +3974,10 @@ li.nav-item .btn-white { color: #46484a; }
 
 .home .col-gallery { display: flex; }
 
+.blog-feature { transition: all .5s ease-in-out; background-size: 100% !important; }
+
+.blog-feature:hover { background-size: 110% !important; }
+
 .testimonial-item .carousel-caption { position: relative; }
 
 .testimonial-item blockquote p { font-size: 1.8rem; font-weight: 300; font-style: italic; color: #fff; }
@@ -4061,8 +4065,6 @@ li.nav-item .btn-white { color: #46484a; }
 .gallery-3 .col-gallery { padding-top: 2rem; padding-bottom: 2rem; padding-top: 2rem; padding-bottom: 2rem; justify-content: flex-start; display: flex; flex-direction: column; }
 
 .gallery-3 .col-gallery img { width: 100%; }
-
-.blog-feature { background-size: cover !important; }
 
 .pagination-nav { display: flex; justify-content: center; margin-top: 30px; }
 
