--- a/wp-content/themes/custom/sass/utilities/_variables.scss
+++ b/wp-content/themes/custom/sass/utilities/_variables.scss
@@ -21,7 +21,7 @@ $text-color-primary: $dimgray;
 $text-color-secondary: $white;
 $text-color-header: $color-primary;
 
-
+$text-shadow: #666;
 
 //== Background Colours
 $background-primary: $dimgray;
