--- a/wp-content/themes/custom/sass/sections/_cover.scss
+++ b/wp-content/themes/custom/sass/sections/_cover.scss
@@ -16,6 +16,7 @@
     text-transform: uppercase;
     font-size: 1.5em;
     letter-spacing: 2px;
+    text-shadow: 1px 1px $text-shadow;
   }
   &__title {
     color: #fff;
@@ -24,25 +25,31 @@
     margin-top: 20px;
     font-size: 4.5em;
     letter-spacing: 4px;
+    text-shadow: 1px 1px $text-shadow;
   }
   &__catergory-list {
     a {
+      @extend .expand;
       color: #fff;
       text-decoration: none;
       padding: 0 10px;
       text-transform: uppercase;
-      &:hover {
-        text-decoration: underline;
-      }
+      text-shadow: 1px 1px $text-shadow;
     }
   }
+
+
 
   &__footer {
     position: fixed;
     bottom: 0;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     width: 100%;
   }
 
+}
+
+.home .social {
+  padding: 10px;
 }
