--- a/wp-content/themes/custom/sass/utilities/_globals.scss
+++ b/wp-content/themes/custom/sass/utilities/_globals.scss
@@ -16,24 +16,76 @@ body{
     box-sizing:border-box;
 }
 
+.social {
+
+  text-align: center;
+  a {
+    padding: 6px;
+    border-radius: 50%;
+    display: inline-block;
+    border: 1px white solid;
+    margin-left: 5px;
+  }
+  i {
+    width: 35px;
+    height: 35px;
+    color: #fff;
+    font-size: 1.3em;
+    padding: 7px;
+  }
+}
 
 
-// .hero {
-//   background-image: url(../images/feature.jpg);
-//   background-repeat: no-repeat;
-//   background-position: center;
-//   background-size: cover;
-//   height: 400px;
-//   display: flex;
-//   align-items: flex-end;
-//   &__title {
-//     margin-left: 31px;
-//     margin-bottom: 20px;
-//     h1 {
-//       color: #fff;
-//     }
-//   }
-// }
+
+// under line hover class
+.expand {
+  position:relative;
+  text-decoration:none;
+  display:inline-block;
+  border-bottom: solid 2px transparent; // stop from jumping around
+}
+.expand:after {
+  display:block;
+  content: '';
+  border-bottom: solid 2px #fff;
+  transform: scaleX(0);
+  transition: transform .35s ease-in-out;
+  transform-origin:100% 50%
+}
+.expand:hover:after {
+  transform: scaleX(1);
+  transform-origin:0 50%;
+}
+
+
+.current-menu-item a {
+  position:relative;
+  text-decoration:none;
+  display:inline-block;
+}
+
+
+.current-menu-item a::after {
+  display:block;
+  content: '';
+  border-bottom: solid 2px #fff;
+  transform: scaleX(1);
+  transform-origin:0 50%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /* =======================================================================
 ## ++ Cleafix
