--- a/wp-content/themes/custom/style.css
+++ b/wp-content/themes/custom/style.css
@@ -1,13 +1,13 @@
 /*
-Theme Name: Custom theme sidemenu
-Theme URI: http://dubzz.co.nz
-Author: Dubzz Digital Marketing
-Author URI: Dubzz.co.nz
-Description: New custom template with b4 grid
-Version: 2.1
+Theme Name: BeezKneez
+Theme URI: https://www.facebook.com/profile.php?id=100009026853998
+Author: Byron Murray
+Author URI: https://www.facebook.com/profile.php?id=100009026853998
+Description: Custom template built with flexbox fontawesome and slickslider
+Version: 1.1
 License: GNU General Public License v2 or later
-Tags: mobile-first, basic, grid, bootstrap
-Text Domain: dubzz.co.nz
+Tags: mobile-first, basic, grid, flexbox, fontawesome, slickslider
+Text Domain: https://www.facebook.com/profile.php?id=100009026853998
 
 */
 
