--- a/wp-content/themes/custom/sass/utilities/_globals.scss
+++ b/wp-content/themes/custom/sass/utilities/_globals.scss
@@ -17,7 +17,6 @@ body{
 }
 
 .social {
-
   text-align: center;
   a {
     padding: 6px;
@@ -35,7 +34,23 @@ body{
   }
 }
 
+// helper classes
+.center-flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
+.center-image {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.expand-element {
+  height: 100%;
+  width: 100%;
+}
 
 // under line hover class
 .expand {
@@ -57,59 +72,14 @@ body{
   transform-origin:0 50%;
 }
 
-
+// current page to have
 .current-menu-item a {
-  position:relative;
-  text-decoration:none;
-  display:inline-block;
+  @extend .expand;
 }
 
-
 .current-menu-item a::after {
+  @extend .expand:hover:after;
   display:block;
   content: '';
   border-bottom: solid 2px #fff;
-  transform: scaleX(1);
-  transform-origin:0 50%;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* =======================================================================
-## ++ Cleafix
-========================================================================== */
-
-/* float clearing for IE6 */
-* html .clearfix{
- height: 1%;
- overflow: visible;
-}
-
-/* float clearing for IE7 */
-*+html .clearfix{
- min-height: 1%;
-}
-
-/* float clearing for everyone else */
-.clearfix:after{
- clear: both;
- content: ".";
- display: block;
- height: 0;
- visibility: hidden;
- font-size: 0;
-}
-
-.clr{clear:both;}
