--- a/wp-content/themes/custom/css/app.css
+++ b/wp-content/themes/custom/css/app.css
@@ -61,7 +61,7 @@ img {
 * {
   box-sizing: border-box; }
 
-.center-flex, .cover, .portfolio__background {
+.center-flex, .catergory-split, .cover, .portfolio__background {
   display: flex;
   justify-content: center;
   align-items: center; }
@@ -75,13 +75,13 @@ img {
   height: 100%;
   width: 100%; }
 
-.expand, .current-menu-item a, .navbar__nav a, .button, .button__view, .button__secondary, .side-menu__list a, .cover__catergory-list a {
+.expand, .current-menu-item a, .navbar__nav a, .button, .button__view, .button__secondary, .side-menu__list a, .catergory-split a {
   position: relative;
   text-decoration: none;
   display: inline-block;
   border-bottom: solid 2px transparent; }
 
-.expand:after, .current-menu-item a:after, .navbar__nav a:after, .button:after, .button__view:after, .button__secondary:after, .side-menu__list a:after, .cover__catergory-list a:after {
+.expand:after, .current-menu-item a:after, .navbar__nav a:after, .button:after, .button__view:after, .button__secondary:after, .side-menu__list a:after, .catergory-split a:after {
   display: block;
   content: '';
   border-bottom: solid 2px #fff;
@@ -89,7 +89,7 @@ img {
   transition: transform .35s ease-in-out;
   transform-origin: 100% 50%; }
 
-.expand:hover:after, .current-menu-item a:hover:after, .current-menu-item a::after, .navbar__nav a:hover:after, .button:hover:after, .button__view:hover:after, .button__secondary:hover:after, .side-menu__list a:hover:after, .cover__catergory-list a:hover:after {
+.expand:hover:after, .current-menu-item a:hover:after, .current-menu-item a::after, .navbar__nav a:hover:after, .button:hover:after, .button__view:hover:after, .button__secondary:hover:after, .side-menu__list a:hover:after, .catergory-split a:hover:after {
   transform: scaleX(1);
   transform-origin: 0 50%; }
 
@@ -362,24 +362,44 @@ input:focus {
   padding-top: 50px; }
 
 .cover {
-  background-image: url(../images/feature.jpg);
+  overflow: hidden; }
+
+.catergory-split {
+  text-align: center;
+  overflow: hidden;
+  height: 100%;
+  flex: 1 1 25%;
+  transition: all 1s;
+  z-index: 99; }
+  .catergory-split .catergory-split__content hr, .catergory-split .catergory-split__content a {
+    opacity: 0;
+    transition: all 1s; }
+  .catergory-split:hover {
+    flex: 1 1 50%;
+    transform: scale(1.1);
+    z-index: 9; }
+    .catergory-split:hover .catergory-split__content hr, .catergory-split:hover .catergory-split__content a {
+      opacity: 1; }
+  .catergory-split hr {
+    width: 80%; }
+  .catergory-split h2 {
+    font-size: 1.5em;
+    color: white;
+    font-family: "Kaushan Script", cursive; }
+  .catergory-split a {
+    color: white; }
+
+.cover {
   height: 100vh; }
   .cover__content {
     text-align: center; }
-  .cover__catergory-list li {
-    display: inline-block; }
-  .cover__catergory-list a {
-    color: #fff;
-    text-decoration: none;
-    padding: 0 10px;
-    text-transform: uppercase;
-    text-shadow: 1px 1px #666; }
   .cover__footer {
     position: fixed;
     bottom: 0;
     display: flex;
     justify-content: flex-end;
-    width: 100%; }
+    width: 100%;
+    z-index: 9999; }
 
 .home .social {
   padding-bottom: 15px;
