--- a/wp-content/themes/custom/sass/utilities/_variables.scss
+++ b/wp-content/themes/custom/sass/utilities/_variables.scss
@@ -19,7 +19,7 @@ $color-secondary: $white;
 //== Text Colours
 $text-color-primary: $dimgray;
 $text-color-secondary: $white;
-$text-color-header: $color-primary;
+$text-color-header: #a8a8a8;
 
 $text-shadow: #666;
 
