--- a/wp-content/themes/custom/css/app.css
+++ b/wp-content/themes/custom/css/app.css
@@ -75,13 +75,13 @@ img {
   height: 100%;
   width: 100%; }
 
-.expand, .current-menu-item a, .navbar__nav a, .button, .button__view, .button__secondary, .side-menu__list a, .catergory-split a {
+.expand, .expand--black, .page-template-page-php .navbar li a, .split-layout__footer a, .current-menu-item a, .navbar__nav a, .button, .button__view, .button__secondary, .side-menu__list a, .catergory-split a {
   position: relative;
   text-decoration: none;
   display: inline-block;
   border-bottom: solid 2px transparent; }
 
-.expand:after, .current-menu-item a:after, .navbar__nav a:after, .button:after, .button__view:after, .button__secondary:after, .side-menu__list a:after, .catergory-split a:after {
+.expand:after, .expand--black:after, .page-template-page-php .navbar li a:after, .split-layout__footer a:after, .current-menu-item a:after, .navbar__nav a:after, .button:after, .button__view:after, .button__secondary:after, .side-menu__list a:after, .catergory-split a:after {
   display: block;
   content: '';
   border-bottom: solid 2px #fff;
@@ -89,9 +89,12 @@ img {
   transition: transform .35s ease-in-out;
   transform-origin: 100% 50%; }
 
-.expand:hover:after, .current-menu-item a:hover:after, .current-menu-item a::after, .navbar__nav a:hover:after, .button:hover:after, .button__view:hover:after, .button__secondary:hover:after, .side-menu__list a:hover:after, .catergory-split a:hover:after {
+.expand:hover:after, .expand--black:hover:after, .page-template-page-php .navbar li a:hover:after, .split-layout__footer a:hover:after, .current-menu-item a:hover:after, .current-menu-item a::after, .navbar__nav a:hover:after, .button:hover:after, .button__view:hover:after, .button__secondary:hover:after, .side-menu__list a:hover:after, .catergory-split a:hover:after {
   transform: scaleX(1);
   transform-origin: 0 50%; }
+
+.expand--black:after, .page-template-page-php .navbar li a:after, .split-layout__footer a:after {
+  border-bottom: solid 2px #5c5c5c; }
 
 .current-menu-item a::after {
   display: block;
@@ -114,7 +117,7 @@ img {
   text-shadow: 1px 1px #666; }
 
 .title__page-header {
-  color: #a8a8a880;
+  color: #dbdbdb;
   font-family: "Kaushan Script", cursive;
   font-size: 5.5em;
   line-height: 1.3;
@@ -300,7 +303,7 @@ input:focus {
       margin-bottom: 1.4em;
       width: 80%;
       height: 4px;
-      background: #a8a8a880;
+      background: #dbdbdb;
       border: none;
       text-shadow: 1px 1px #ffffff1a; }
     .split-layout__feature-image .social {
@@ -319,21 +322,25 @@ input:focus {
     margin-right: auto;
     margin-bottom: 4em; }
     .split-layout__content h2 {
-      opacity: 0.1;
+      color: whitesmoke;
       font-size: 10em;
       position: fixed;
-      right: 0%; }
+      right: 0%;
+      z-index: -1; }
   .split-layout__heading {
     text-align: center;
     position: absolute;
     top: 151px;
     right: -139px; }
   .split-layout__footer {
+    color: #a8a8a8;
     position: fixed;
     bottom: 5px;
     right: 10px; }
     .split-layout__footer .copyright {
       text-align: right; }
+    .split-layout__footer a {
+      color: #5c5c5c; }
 
 .side-menu__container {
   background: #000; }
@@ -373,10 +380,9 @@ input:focus {
   z-index: 99; }
   .catergory-split .catergory-split__content hr, .catergory-split .catergory-split__content a {
     opacity: 0;
-    transition: all 1s; }
+    transition: opacity 1s; }
   .catergory-split:hover {
     flex: 1 1 50%;
-    transform: scale(1.1);
     z-index: 9; }
     .catergory-split:hover .catergory-split__content hr, .catergory-split:hover .catergory-split__content a {
       opacity: 1; }
@@ -385,7 +391,8 @@ input:focus {
   .catergory-split h2 {
     font-size: 1.5em;
     color: white;
-    font-family: "Kaushan Script", cursive; }
+    font-family: "Kaushan Script", cursive;
+    text-transform: uppercase; }
   .catergory-split a {
     color: white; }
 
@@ -437,7 +444,8 @@ input:focus {
   position: absolute;
   left: 0%;
   bottom: 31px;
-  color: #fff; }
+  color: #fff;
+  cursor: pointer; }
 
 .page-template-page-services .navbar {
   background: transparent; }
