--- a/wp-content/themes/custom/sass/sections/_cover.scss
+++ b/wp-content/themes/custom/sass/sections/_cover.scss
@@ -1,3 +1,7 @@
+.home {
+//  background: $black;
+}
+
 .cover {
   overflow: hidden;
 }
@@ -13,11 +17,11 @@
   z-index: 99;
   .catergory-split__content hr,.catergory-split__content a {
     opacity: 0;
-    transition: all 1s;
+    transition: opacity 1s;
   }
   &:hover {
     flex: 1 1 50%;
-    transform: scale(1.1);
+    //transform: scale(1.1);
     z-index: 9;
 
     .catergory-split__content hr,.catergory-split__content a {
@@ -31,6 +35,7 @@
     font-size: 1.5em;
     color: white;
     font-family: "Kaushan Script", cursive;
+    text-transform: uppercase;
   }
   a {
     @extend .expand;
