--- a/wp-content/themes/custom/sass/layouts/_index.scss
+++ b/wp-content/themes/custom/sass/layouts/_index.scss
@@ -108,7 +108,7 @@
 
   &__content {
     background: #fff;
-    min-height: calc(100vh - 50px);
+    height: calc(100vh - 50px);
 
     padding-left: 300px;
     padding-top: 50px;
